--- a/MapboxAndroidDemo/build.gradle
+++ b/MapboxAndroidDemo/build.gradle
@@ -114,6 +114,7 @@ dependencies {
     implementation dependenciesList.supportCustomTabs
     implementation dependenciesList.supportV4
     implementation dependenciesList.supportConstraintLayout
+    implementation dependenciesList.supportAnimation
 
     // Mapbox dependencies
     chinaImplementation dependenciesList.mapboxChinaPlugin
